# nfts

./: .gitignore  Cargo.toml  LICENSE  README.md  build-premine.sh  contributor-extensions.csv  contributor-premine.csv  name-services  premine-warnings.csv  premine.csv  yoinks.csv
src/: cli.rs  db.rs  error.rs  main.rs  models.rs  utils.rs
src/commands/: add.rs  list.rs  mod.rs  query.rs  sync.rs
src/commands/premine/: confirm.rs  generate.rs  mintgarden_cns_hydrate.rs  mintgarden_hydrate.rs  mod.rs
src/premine/: constants.rs  csv.rs  expiration.rs  handle.rs  metadata_verify.rs  mod.rs  selection.rs
src/premine/testdata/: domains_xch_metadata_json.json
