[package]
name = "nfts"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["yakuhito <y@kuhi.to>"]
homepage = "https://github.com/Yakuhito/nfts"
repository = "https://github.com/Yakuhito/nfts"

[dependencies]
chia-wallet-sdk = { version = "0.33.0", features = ["rustls", "chip-0035"] }
clap = { version = "4.5.58", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
clvmr = "=0.16.2"
thiserror = "2.0.18"
reqwest = { version = "0.12.23", default-features = false, features = ["json"] }